fix horizontal overflow

--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -1,6 +1,5 @@
 .container {
   height: 100vh;
-  width: 100vw;
   min-height: -webkit-fill-available;
   padding: 10rem 5rem 3rem 5rem;
   scroll-snap-align: start;
@@ -102,7 +101,7 @@
 }
 
 #spin {
-  font-size: clamp(2rem, 4vw + 1rem, 8.109rem);
+  font-size: clamp(2rem, 4vw + 1rem, 8rem);
   font-weight: 800;
 }
 
